--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "author": "Vadym",
   "license": "ISC",
   "devDependencies": {
-    "bootstrap": "^5.2.3",
     "browser-sync": "^2.29.1",
     "del": "^6.0.0",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cssbeautify": "^3.0.1",
     "gulp-cssnano": "^2.1.3",
@@ -31,5 +30,11 @@
     "imagemin-svgo": "^10.0.1",
     "panini": "^1.7.2",
     "sass": "^1.61.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1"
   }
 }
